[gd_scene load_steps=14 format=2]

[ext_resource path="res://TeenyTinyPixls.tres" type="DynamicFont" id=1]
[ext_resource path="res://sprites/pong_bg.png" type="Texture" id=2]
[ext_resource path="res://sprites/square.png" type="Texture" id=3]
[ext_resource path="res://PlayerController.gd" type="Script" id=4]
[ext_resource path="res://sfx/win.wav" type="AudioStream" id=5]
[ext_resource path="res://Goal.gd" type="Script" id=6]
[ext_resource path="res://Pong.gd" type="Script" id=7]
[ext_resource path="res://sfx/point.wav" type="AudioStream" id=8]
[ext_resource path="res://sfx/hit.wav" type="AudioStream" id=9]
[ext_resource path="res://AIController.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 40 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 512, 5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 310 )

[node name="Pong" type="Node2D"]
script = ExtResource( 7 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Left_Points" type="Label" parent="."]
margin_left = 350.0
margin_right = 500.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
rect_pivot_offset = Vector2( 75, 75 )
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1
valign = 1
autowrap = true

[node name="Right_Points" type="Label" parent="."]
margin_left = 537.0
margin_right = 687.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
rect_pivot_offset = Vector2( 75, 75 )
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1
valign = 1
autowrap = true

[node name="Left_Paddle" type="KinematicBody2D" parent="."]
position = Vector2( 150, 300 )
script = ExtResource( 4 )
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left_Paddle"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Left_Paddle"]
scale = Vector2( 1, 5 )
texture = ExtResource( 3 )

[node name="Right_Paddle" type="KinematicBody2D" parent="."]
position = Vector2( 874, 300 )
script = ExtResource( 10 )
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right_Paddle"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Right_Paddle"]
scale = Vector2( 1, 5 )
texture = ExtResource( 3 )

[node name="Bouncers" type="StaticBody2D" parent="."]
position = Vector2( 512, 300 )

[node name="Ceiling" type="CollisionShape2D" parent="Bouncers"]
position = Vector2( 0, -305 )
shape = SubResource( 2 )

[node name="Floor" type="CollisionShape2D" parent="Bouncers"]
position = Vector2( 0, 305 )
shape = SubResource( 2 )

[node name="Left_Goal" type="Area2D" parent="."]
position = Vector2( 0, 300 )
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left_Goal"]
position = Vector2( -10, 0 )
shape = SubResource( 5 )

[node name="Right_Goal" type="Area2D" parent="."]
position = Vector2( 1024, 300 )
script = ExtResource( 6 )
side = "Right"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right_Goal"]
position = Vector2( 10, 0 )
shape = SubResource( 5 )

[node name="Win_Indicator" type="Label" parent="."]
visible = false
margin_left = 540.0
margin_top = 200.0
margin_right = 860.0
margin_bottom = 400.0
rect_min_size = Vector2( 320, 200 )
rect_pivot_offset = Vector2( 160, 100 )
custom_fonts/font = ExtResource( 1 )
text = "Side
Wins"
align = 1
valign = 1

[node name="Sound_Player" type="Node" parent="."]

[node name="Hit" type="AudioStreamPlayer" parent="Sound_Player"]
stream = ExtResource( 9 )
volume_db = -51.076

[node name="Point" type="AudioStreamPlayer" parent="Sound_Player"]
stream = ExtResource( 8 )

[node name="Win" type="AudioStreamPlayer" parent="Sound_Player"]
stream = ExtResource( 5 )
